Fix tips covering long usernames
The URL tip overlaps the welcome message, and unless the image is below the
name, the name becomes unclickable. This solution isn't perfect because you can
see the arrow tip vanish before the rest.

--- a/app/stylesheets/sites/form.scss
+++ b/app/stylesheets/sites/form.scss
@@ -14,13 +14,18 @@ form {
     position: relative;
 
     .tip {
+      @include transition(opacity, .25s, ease-in-out);
+
       opacity: 0;
       position: absolute;
-      @include transition(opacity, .25s, ease-in-out);
+      z-index: -1000;
     }
 
     input:hover + .tip,
-    input:focus + .tip { opacity: 100; }
+    input:focus + .tip {
+      opacity: 100;
+      z-index: 1000;
+    }
 
     &.name .tip {
       left: 435px;
